backend/clean-error.txt


file:///C:/My%20projects/SL-SHOPEE/backend/routes/deals.js:2
import { protect, admin } from '../middleware/auth.js';
                  ^^^^^
SyntaxError: The requested module '../middleware/auth.js' does not provide an export named 'admin'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:226:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.21.0
